--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,9 @@ bin-release/
 .settings/
 
 # Executables
-*.swf
-*.air
-*.ipa
+*.php
 *.apk
+*.exe
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
